# src/app/docs/openapi.yaml
@@ -181,43 +181,52 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/errorResponse"
-  #   put:
-  #     security:
-  #       - BearerAuth: []
-  #     tags:
-  #       - Product
-  #     summary: Altera dados da consulta Product
-  #     operationId: put Product
-  #     requestBody:
-  #       content:
-  #         application/json:
-  #           schema:
-  #             type: object
-  #             properties:
-  #               productName:
-  #                 type: string
-  #               id:
-  #                 type: number
+    put:
+      # security:
+        # - ApiKeyAuth: []
+      tags:
+        - Product
+      summary: Altera dados da conta do Usuario
+      operationId: put Usario Conta
+      parameters:
+        - in: path
+          name: username
+          required: true
+          schema:
+            type: string
+            description: Username
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                email:
+                  type: string
+                password:
+                  type: string
+                profilePicture:
+                  type: string
 
-  #     responses:
-  #       201:
-  #         description: put Product
-  #         content:
-  #           application/json:
-  #             schema:
-  #               $ref: "#/components/schemas/product-put"
-  #       401:
-  #         description: UNAUTHORIZED
-  #         content:
-  #           application/json:
-  #             schema:
-  #               $ref: "#/components/schemas/errorResponse"
-  #       500:
-  #         description: INTERNAL_SERVER_ERROR
-  #         content:
-  #           application/json:
-  #             schema:
-  #               $ref: "#/components/schemas/errorResponse"
+      responses:
+        200:
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+        401:
+          description: UNAUTHORIZED
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/errorResponse"
+        500:
+          description: INTERNAL_SERVER_ERROR
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/errorResponse"
   #   delete:
   #     security:
   #       - BearerAuth: []
